# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: check-myproject.yml
hexlet_package/: file1.json  generate.py  user.py
hexlet_package/scripts/: gendiff.py
hexlet_package/tests/: test_gendiff.py
hexlet_package/tests/fixtures/: file1.yml
