[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ankosde <ankos.de@gmil.com>"]
readme = "README.md"
packages = [{include = "hexlet_package"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "hexlet_package.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
